--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-express",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "node app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -14,8 +14,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.9.28",
-    "multer": "^1.4.2"
+    "mongoose": "^5.9.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
