--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,12 @@
 /coverage
 
 # production
-/build
+build
+/src
+/public
+package.json
+package-lock.json
+README.md
 
 # misc
 .DS_Store
@@ -21,3 +26,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/.firebase
+.firebaserc
+firebase.json
